@@ -29,6 +29,7 @@
    <!ENTITY supported-sparc.xml         SYSTEM "##SRCPATH##/hardware/supported/sparc.xml">
   <!ENTITY network-cards.xml            SYSTEM "##SRCPATH##/hardware/network-cards.xml">
   <!ENTITY supported-peripherals.xml    SYSTEM "##SRCPATH##/hardware/supported-peripherals.xml">
+  <!ENTITY accessibility-hardware.xml   SYSTEM "##SRCPATH##/hardware/accessibility.xml">
   <!ENTITY buying-hardware.xml          SYSTEM "##SRCPATH##/hardware/buying-hardware.xml">
   <!ENTITY installation-media.xml       SYSTEM "##SRCPATH##/hardware/installation-media.xml">
   <!ENTITY memory-disk-requirements.xml SYSTEM "##SRCPATH##/hardware/memory-disk-requirements.xml">
@@ -94,6 +95,7 @@
   <!ENTITY boot-installer-s390.xml         SYSTEM "##SRCPATH##/boot-installer/s390.xml">
   <!ENTITY boot-installer-sparc.xml        SYSTEM "##SRCPATH##/boot-installer/sparc.xml">
   <!ENTITY boot-installer-parameters.xml   SYSTEM "##SRCPATH##/boot-installer/parameters.xml">
+  <!ENTITY boot-installer-accessibility.xml   SYSTEM "##SRCPATH##/boot-installer/accessibility.xml">
   <!ENTITY boot-installer-trouble.xml      SYSTEM "##SRCPATH##/boot-installer/trouble.xml">
 
  <!ENTITY using-d-i.xml                  SYSTEM "##SRCPATH##/using-d-i/using-d-i.xml">
