@@ -1,0 +1,99 @@
+<!-- retain these comments for translator revision tracking -->
+<!-- $Id: boot-installer-accessibility.xml $ -->
+
+ <sect1 id="boot-installer-accessibility" arch="not-s390">
+ <title>Accessibility</title>
+<para>
+
+Some users may need specific support because of e.g. some visual
+impairment.
+<phrase arch="alpha;ia64;powerpc;x86">USB braille displays are detected
+automatically, but most other</phrase>
+<phrase arch="arm;hppa;mips;mipsel;m68k;sparc">Most</phrase>
+accessibility features have to be enabled manually.
+<phrase arch="x86">On machines that support it, the boot menu emits a beep
+when it is ready to receive keystrokes.</phrase>
+Some boot parameters can <phrase arch="x86">then</phrase> be appended to
+enable accessibility features. Note that on most architectures the boot
+loader interprets your keyboard as a QWERTY keyboard.
+
+</para>
+
+  <sect2 arch="alpha;ia64;powerpc;x86">
+  <title>USB Braille Displays</title>
+<para>
+
+USB braille displays should be automatically detected. A textual version
+of the installer will then be automatically selected, and support for the
+braille display will be automatically installed on the target system.
+You can thus just press &enterkey; at the boot menu.
+Once <classname>brltty</classname> is started, you can choose a braille
+table by entering the preference menu.
+
+</para>
+  </sect2>
+
+  <sect2 arch="alpha;ia64;powerpc;x86">
+  <title>Serial Braille Displays</title>
+<para>
+
+Serial braille displays cannot safely be automatically detected
+(since that may damage some of them). You thus need to append the
+<userinput>brltty=<replaceable>driver</replaceable>,<replaceable>port</replaceable>,<replaceable>table</replaceable></userinput>
+boot parameter to tell <classname>brltty</classname> which driver it
+should use. <replaceable>driver</replaceable> should be replaced by the
+two-letter driver code for your terminal (see the
+<ulink url="&url-brltty-driver-codes;">driver code list</ulink>).
+<replaceable>device</replaceable> should be replaced by the name of the
+serial port the display is connected to, <userinput>ttyS0</userinput> is
+the default. <replaceable>table</replaceable> is the name of the braille
+table to be used (see the <ulink url="&url-brltty-table-codes;">table code
+list</ulink>); the English table is the default. Note that the table can
+be changed later by entering the preference menu.
+
+</para>
+  </sect2>
+
+  <sect2 arch="x86">
+  <title>Hardware Speech Synthesis</title>
+<para>
+
+Support for hardware speech synthesis devices is available only alongside
+support for graphical installer. You thus need to select the
+<quote>Graphical install</quote> entry in the boot menu.
+
+Hardware speech synthesis devices cannot be automatically detected. You
+thus need to append the
+<userinput>speakup.synth=<replaceable>driver</replaceable></userinput>
+boot parameter to tell <classname>speakup</classname> which driver it should
+use. <replaceable>driver</replaceable> should be replaced by the driver code
+for your device (see <ulink url="&url-speakup-driver-codes;">driver code
+list</ulink>). The textual version of the installer will then be
+automatically selected, and support for the speech synthesis device will be
+automatically installed on the target system.
+
+</para>
+  </sect2>
+
+  <sect2><title>Board Devices</title>
+<para>
+
+Some accessibility devices are actual boards that are plugged inside the
+machine and that read text directly from the video memory. To get them
+to work framebuffer support must be disabled by using the
+<userinput>fb=false</userinput> boot parameter. This will however reduce
+the number of available languages.
+
+</para>
+  </sect2>
+
+  <sect2><title>High-Contrast Theme</title>
+<para>
+
+For users with low vision, the installer can use a high-contrast
+theme that makes it more readable. To enable it, append the
+<userinput>theme=dark</userinput> boot parameter.
+
+</para>
+  </sect2>
+ </sect1>
