@@ -1,0 +1,34 @@
+<!-- retain these comments for translator revision tracking -->
+<!-- $Id: accessibility-hardware.xml $ -->
+
+  <sect2 id="braille-displays" arch="alpha;ia64;powerpc;x86">
+  <title>Braille Displays</title>
+<para>
+
+Support for braille displays is determined by the underlying support
+found in <classname>brltty</classname>. Most displays work under
+<classname>brltty</classname>, connected via either a serial port, USB
+or bluetooth. Details on supported braille devices can be found on the
+<ulink url="&url-brltty;"><classname>brltty</classname> website</ulink>.
+&debian; &release; ships with <classname>brltty</classname> version
+&brlttyver;.
+
+</para>
+  </sect2>
+
+  <sect2 id="hardware-speech-synthesis" arch="x86">
+  <title>Hardware Speech Synthesis</title>
+<para>
+
+Support for hardware speech synthesis devices is determined by the
+underlying support found in <classname>speakup</classname>.
+<classname>speakup</classname> only supports integrated boards and
+external devices connected to a serial port (no USB or serial-to-USB
+adapters are supported). Details on supported hardware speech synthesis
+devices can be found on the
+<ulink url="&url-speakup;"><classname>speakup</classname> website</ulink>.
+&debian; &release; ships with <classname>speakup</classname> version
+&speakupver;.
+
+</para>
+  </sect2>
