@@ -30,7 +30,10 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Fix example how to generate md5-encoded password. Closes: #518018.
   * Fix missing tags in Japanese translation. Closes: #509372.
 
- -- Frans Pop <fjp@debian.org>  Mon, 06 Apr 2009 01:27:07 +0200
+  [ Samuel Thibault ]
+  * Document accessibility support. Closes: #509371.
+
+ -- Frans Pop <fjp@debian.org>  Tue, 07 Apr 2009 10:36:26 +0200
 
 installation-guide (20081208) unstable; urgency=low
 
